# SLR-PARSER

./: CMakeLists.txt  README.md
include/: outputstates.h  parser.h  slrbuild.h  token.h
lexer/: lexer.l
src/: main.cpp  outputstates.cpp  parser.cpp  slrbuild.cpp
tests/: tests.cpp
